--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Your Name - Personal Website</title>
+    <title>Oh Jackie - Personal Website</title>
 </head>
 <body>
     <header>
@@ -21,15 +21,15 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <img src="./img/personal.png" alt="Your Name" class="profile-photo">
-            <h1>Your Name</h1>
-            <p>Web Developer | Designer | Creative Enthusiast</p>
+            <h1>Jackie Chen</h1>
+            <p>C/C++ Developer | SAP HANA Consultant | Linux Enthusiast</p>
         </div>
     </section>
     
     <section id="about" class="section">
         <div class="content">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla auctor nisi id metus tincidunt, id vulputate tortor sollicitudin.</p>
+            <p>I'm a passionate student from NCU(Taiwan) with a strong curiosity for low-level programming and Linux exploration. I dabble in kernel tinkering and create small, custom terminal tools for fun and learning.</p>
         </div>
     </section>
     
