--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <section id="home" class="hero">
         <div class="hero-content">
-            <img src="./img/personal.png" alt="Your Name" class="profile-photo">
+            <img src="./img/personal.jpg" alt="Your Name" class="profile-photo">
             <h1>Jackie Chen</h1>
             <p>C/C++ Developer | SAP HANA Consultant | Linux Enthusiast</p>
         </div>
