--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Oh Jackie - Personal Website</title>
+    <title>Oh Jackie - Personal Webpage</title>
     <script src="./smooth-scroll.js"></script>
 </head>
 <body>
