--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="hero-content">
             <img src="./img/personal.jpg" alt="Your Name" class="profile-photo">
             <h1>Jackie Chen</h1>
-            <p>C/C++ Developer | SAP HANA Consultant | Linux Enthusiast</p>
+            <p>C/C++ Developer&nbsp;&nbsp;|&nbsp;&nbsp;SAP HANA Consultant&nbsp;&nbsp;|&nbsp;&nbsp;Linux Enthusiast</p>
         </div>
     </section>
     
@@ -45,14 +45,22 @@
         <div class="content">
             <h2>Projects</h2>
             <div class="project">
-                <img src="project1.jpg" alt="Project 1">
-                <h3>Project 1</h3>
-                <p>Description of Project 1.</p>
+                <img src="./img/pairup.png" alt="Project 1">
+                <h3>PairUP</h3>
+                <a href="https://github.com/jackiesogi/PairUP" target="_blank" style="text-align: left;">Take a look at PairUP on Github</a>
+                <p>PairUP is a project established for English speaking study group. It solves the problem of manually matching practice partners every day, improving the operational efficiency of the study group.</p>
             </div>
             <div class="project">
-                <img src="project2.jpg" alt="Project 2">
-                <h3>Project 2</h3>
-                <p>Description of Project 2.</p>
+                <img src="./img/XOR.png" alt="Project 2">
+                <h3>Simple XOR Encryption</h3>
+                <a href="https://github.com/jackiesogi/Simple_XOR_Encryption" target="_blank" style="text-align: left;">Take a look at Simple_XOR_Encryption on Github</a>
+                <p>SimpleXOREncrytion is a terminal tool that helps users encrypt some confidential files and switch the encryption status by simply opening and closing.</p>
+            </div>
+            <div class="project">
+                <img src="./img/db.png" alt="Project 3">
+                <h3>Rebis DB</h3>
+                <a href="https://github.com/jackiesogi/SimpleDB/tree/rebis-backup" target="_blank" style="text-align: left;">Take a look at Rebis DB on Github</a>
+                <p>This is a program written in tribute to the Redis open source project, so it is named Rebis. It is a relatively simple version of the keyvalue database implementation, but it has an access speed 30 times faster than the Redis database.</p>
             </div>
             <!-- Add more projects as needed -->
         </div>
