--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
             <h2>Projects</h2>
             <div class="project">
                 <img src="./img/pairup.png" alt="Project 1">
-                <h3>PairUP</h3>
+                <h4>PairUP</h4>
                 <a href="https://github.com/jackiesogi/PairUP" target="_blank" style="text-align: left;">Take a look at PairUP on Github</a>
                 <p>PairUP is a project established for English speaking study group. It solves the problem of manually matching practice partners every day, improving the operational efficiency of the study group.</p>
             </div>
             <div class="project">
                 <img src="./img/XOR.png" alt="Project 2">
-                <h3>Simple XOR Encryption</h3>
+                <h4>Simple XOR Encryption</h4>
                 <a href="https://github.com/jackiesogi/Simple_XOR_Encryption" target="_blank" style="text-align: left;">Take a look at Simple_XOR_Encryption on Github</a>
                 <p>SimpleXOREncrytion is a terminal tool that helps users encrypt some confidential files and switch the encryption status by simply opening and closing.</p>
             </div>
             <div class="project">
                 <img src="./img/db.png" alt="Project 3">
-                <h3>Rebis DB</h3>
+                <h4>Rebis DB</h4>
                 <a href="https://github.com/jackiesogi/SimpleDB/tree/rebis-backup" target="_blank" style="text-align: left;">Take a look at Rebis DB on Github</a>
                 <p>This is a program written in tribute to the Redis open source project, so it is named Rebis. It is a relatively simple version of the keyvalue database implementation, but it has an access speed 30 times faster than the Redis database.</p>
             </div>
@@ -69,7 +69,7 @@
     <section id="contact" class="section">
         <div class="content">
             <h2>Contact</h2>
-            <p>Contact me at: jackiesogi@gmail.com</p>
+            <p>Contact me at: jackie116@proton.me</p>
         </div>
     </section>
 
