update contact info

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     <section id="contact" class="section">
         <div class="content">
             <h2>Contact</h2>
-            <p>Contact me at: jackie116@proton.me</p>
+            <p>Contact me at: <a href="mailto:jck.tux@pm.me" class="contact-link">jackie116@proton.me</a></p>
         </div>
-    </section>
+    </section>    
 
     <footer>
         <p>&copy; 2023 Jackie Chen</p>
