update contact info

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section id="contact" class="section">
         <div class="content">
             <h2>Contact</h2>
-            <p>Contact me at: <a href="mailto:jck.tux@pm.me" class="contact-link">jackie116@proton.me</a></p>
+            <p>Contact me at: <a href="mailto:jck.tux@pm.me" class="contact-link">jck.tux@pm.me</a></p>
         </div>
     </section>    
 
