update about info

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="hero-content">
             <img src="./img/personal.jpg" alt="Your Name" class="profile-photo">
             <h1>Jackie Chen</h1>
-            <p>C/C++ Developer&nbsp;&nbsp;|&nbsp;&nbsp;SAP HANA Consultant&nbsp;&nbsp;|&nbsp;&nbsp;Linux Enthusiast</p>
+            <p>C/C++ Developer&nbsp;&nbsp;|&nbsp;&nbsp;Security Enthusiast&nbsp;&nbsp;|&nbsp;&nbsp;Linux Enthusiast</p>
         </div>
     </section>
     
