--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
                 <a href="https://github.com/jackiesogi/SimpleDB/tree/rebis-backup" target="_blank" style="text-align: left;">Take a look at Rebis DB on Github</a>
                 <p>This is a program written in tribute to the Redis open source project, so it is named Rebis. It is a relatively simple version of the keyvalue database implementation, but it has an access speed 30 times faster than the Redis database.</p>
             </div>
+            <div class="project">
+                <img src="./img/ve.png" alt="Project 4">
+                <h4>Simpledit Video Editor</h4>
+                <a href="https://github.com/jackiesogi/GTK-video-editor/tree/ffmpeg" target="_blank" style="text-align: left;">Take a look at Simpledit on Github</a>
+                <p>This is a ligthweight video editor rely on ffmpeg and gtkmm technology, aims to become a good choice for those who want to edit their video on linux platform without installing some application that might take GB on your disk.</p>
+            </div>
             <!-- Add more projects as needed -->
         </div>
     </section>
