update project 4 info

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="project">
                 <img src="./img/ve.png" alt="Project 4">
-                <h4>Simpledit Video Editor</h4>
+                <h4>Simpledit Video Editor（still under development）</h4>
                 <a href="https://github.com/jackiesogi/GTK-video-editor/tree/ffmpeg" target="_blank" style="text-align: left;">Take a look at Simpledit on Github</a>
                 <p>This is a ligthweight video editor rely on ffmpeg and gtkmm technology, aims to become a good choice for those who want to edit their video on linux platform without installing some application that might take GB on your disk.</p>
             </div>
