--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
             			align-items: center;
             			justify-content: center;
         		}
+                        .background-color {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                background-color: #f0f0f0; /* Adjust as needed */
+                                z-index: -1;
+                        }
     		</style>
 
 		<title>Oh Jackie - Personal Webpage</title>
@@ -76,7 +85,7 @@
 		</nav>
 
 		<!-- Main content -->
-		<div class="container mt-5 pt-5">
+		<div class="container mt-5 pt-5 background-color">
 			<!-- Modal for alert dialog -->
 			<div class="modal fade" id="developmentAlertModal" tabindex="-1" aria-labelledby="developmentAlertModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
