remove conflict style

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		</nav>
 
 		<!-- Main content -->
-		<div class="container mt-5 pt-5 background-color">
+		<div class="container mt-5 pt-5">
 			<!-- Modal for alert dialog -->
 			<div class="modal fade" id="developmentAlertModal" tabindex="-1" aria-labelledby="developmentAlertModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
